# whitepapers

./: Please_a_white_paper_of_this_full_chat_to_share_i_.ipynb.txt
.github/workflows/: phase-space-manuscript.yml  phase-space-validator-ci.yml
phase-space-identity-validator/: .gitignore  CITATION.cff  CONTRIBUTING.md  LICENSE.md  README.md  pyproject.toml
phase-space-identity-validator/docs/: ANALYSIS_REPORT.md  DIMENSION_INFERENCE.md  EXPRESSION_AST.md  MATHEMATICAL_SCOPE.md  SYMBOLIC_COUNTEREXAMPLES.md  TENSOR_INFERENCE.md  TEXT_PARSER.md
phase-space-identity-validator/examples/: canonical-commutator.json  invalid-cross-gradient.json
phase-space-identity-validator/examples/ast/: canonical-commutator-expression.json  cross-gradient-zero-expression.json  invalid-cross-gradient-expression.json  kronecker-contraction-expression.json
phase-space-identity-validator/examples/text/: canonical-commutator.txt  cross-gradient-zero.txt  invalid-cross-gradient.txt  kronecker-contraction.txt
phase-space-identity-validator/manuscript/: Makefile  README.md  phase_space_clarification.tex  references.bib
phase-space-identity-validator/manuscript/sections/: 01_introduction.tex  02_diagnosis.tex  03_symplectic_poisson.tex  04_quantum_noncommutativity.tex  05_quantized_circulation.tex  06_angular_momentum.tex  07_diagnostic_dictionary.tex  08_research_extensions.tex  09_conclusion.tex
phase-space-identity-validator/src/phase_space_validator/: __init__.py  analysis_cli.py  analysis_report.py  ast_cli.py  check_cli.py  cli.py  dimension_cli.py  dimension_inference.py  dimensions.py  expressions.py  falsify_cli.py  models.py  report_schema.py  symbolic_counterexample.py  tensor_cli.py  tensor_inference.py  text_cli.py  text_parser.py  validator.py
phase-space-identity-validator/src/phase_space_validator/schemas/: analysis-report-v1.schema.json
phase-space-identity-validator/tests/: test_analysis_cli.py  test_analysis_report.py  test_ast_cli.py  test_cli.py  test_dimension_cli.py  test_dimension_inference.py  test_expressions.py  test_falsify_cli.py  test_symbolic_counterexample.py  test_tensor_cli.py  test_tensor_inference.py  test_text_cli.py  test_text_parser.py  test_validator.py
