[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "phase-space-identity-validator"
version = "0.1.0"
description = "A metadata-driven validator for dimensional, tensorial, operator, and covariance consistency in phase-space identities."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Lovely Owens" }]
keywords = ["physics", "phase-space", "symplectic-geometry", "dimensional-analysis", "quantum-mechanics"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Physics",
]

[project.optional-dependencies]
dev = ["pytest>=8.2", "ruff>=0.5"]

[project.scripts]
psiv = "phase_space_validator.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
